2009-05-11  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* gphotoframe.glade, POTFILES.in, ja.po: Updated translation.
	* flickr.py, preferences.py: Set the sensitiveness and the label 
	  of the argument widget.
	* config.py, urlget.py, wrandom.py: Moved to utils/.
	* flickr.py: Added support user_id or group_id.
	* photoliststore.py, preferences.py, base.py: Added new photo
	  source options: argument.

2009-05-10  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoframe.py, photoliststore.py, base.py: Code refactoring.
	  Added new class PopUpMenu & NoPhoto. Added new photo source options.
	  Added new functions load_gconf & save_gconf.
	
2009-05-09  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoframe.py, lib/*.py: Code refactoring.
	* photoframe.py: Code refactoring.  Added new class NoImage &
	  AboutDialog.  Fixed the hidden bug (behind the nautilus).
	* preferences.py: AboutDialog.set_transient_for(Preferences).
	  Set sensivitiness of buttons in Photo Sources.

2009-05-08  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoframe.py: Fixed the window position.
	  gtk.gdk.WINDOW_TYPE_HINT_DOCK. -> gtk.gdk.WINDOW_TYPE_HINT_DESKTOP.
	* base.py: Added 'import sys' (issue #6).
	* photoliststore.py: Added checking source configurations.
	* gphotoframe.desktop.in, ja.po: Updated strings.

2009-05-07  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoframe.py, gphotoframe.glade: Added support for
	  gtk.gdk.WINDOW_TYPE_HINT_DOCK.  Added check_window_state.

2009-05-05  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* ja.po: Updated translation.
	* gphotoframe.desktop.in: Initial import.
	* photoframe.py, gphotoframe.glade: Added the menu "Fix Photo
	  Frame" (issue #1). Added new gconf key: window_fix. 
	  Removed redundant keys: window_keep_below and window_non_movable.

2009-05-01  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoframe.py (PhotoFrame.set_accelerator): 
	  Added support for accelerator keys.
	* photoframe.py, preferences.py: Added new gconf keys: